--- a/app/src/main/res/layout/activity_my_location.xml
+++ b/app/src/main/res/layout/activity_my_location.xml
@@ -1,38 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MyLocation">
+    android:layout_height="match_parent">
 
-    <RelativeLayout
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:gravity="center_horizontal">
+        android:layout_height="match_parent"
+        tools:context=".MyLocation">
 
-        <ImageView
-            android:id="@+id/locateMe"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_centerVertical="true"
-            android:onClick="locateMe"
-            android:src="@drawable/locate_me" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_toRightOf="@id/locateMe"
-            android:fontFamily="@font/work_sans_bold"
-            android:includeFontPadding="false"
-            android:text="@string/locateMe"
-            android:textColor="@color/navigation_back_color"
-            android:textSize="20sp" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:id="@+id/locateMeContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal|center_vertical"
+                android:orientation="horizontal"
+                android:layout_above="@+id/btnSetHomeLocation">
 
-    </RelativeLayout>
-</fragment>
+                <ImageView
+                    android:id="@+id/locateMeImage"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_centerVertical="true"
+                    android:onClick="locateMe"
+                    android:src="@drawable/locate_me" />
+
+                <TextView
+                    android:id="@+id/locateMeText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_toRightOf="@id/locateMeImage"
+                    android:fontFamily="@font/work_sans_bold"
+                    android:includeFontPadding="false"
+                    android:text="@string/locateMe"
+                    android:textColor="@color/navigation_back_color"
+                    android:textSize="20sp" />
+
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/btnSetHomeLocation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_margin="10dp"
+                android:layout_alignParentBottom="true"
+                android:background="@color/btn_color"
+                android:includeFontPadding="false"
+                android:onClick="saveHomeLocation"
+                android:text="Set Home Locaton"
+                android:textColor="@color/textPrimaryDark" />
+
+        </RelativeLayout>
+
+    </fragment>
+
+
+</LinearLayout>
