--- a/app/src/main/res/layout/activity_my_location.xml
+++ b/app/src/main/res/layout/activity_my_location.xml
@@ -1,5 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".MyLocation">
+
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/backgroundColor"
+        android:elevation="10dp"
+        android:id="@+id/searchBox">
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:id="@+id/ic_magnify"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/ic_magnify" />
+        <AutoCompleteTextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:textSize="15sp"
+            android:textColor="@color/text_color"
+            android:background="@null"
+            android:id="@+id/input_search"
+            android:hint="Enter Address, City or Zip Code"
+            android:inputType="text"
+            android:layout_toRightOf="@id/ic_magnify"
+            android:imeOptions="actionSearch"/>
+
+
+    </RelativeLayout>
+
+
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:translationY="-24dp"
+            android:id="@id/ic_magnify"
+            android:src="@drawable/ic_pin"/>
+
+
+
+    <LinearLayout
+        android:id="@+id/locateMeContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal|center_vertical"
+        android:orientation="horizontal"
+        android:layout_marginBottom="20dp"
+        android:layout_above="@+id/btnSetHomeLocation">
+
+        <ImageView
+            android:id="@+id/locateMeImage"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:onClick="locateMe"
+            android:src="@drawable/ic_gps" />
+
+        <TextView
+            android:id="@+id/locateMeText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_toRightOf="@id/locateMeImage"
+            android:fontFamily="@font/work_sans_bold"
+            android:includeFontPadding="false"
+            android:text="@string/locateMe"
+            android:textColor="@color/navigation_back_color"
+            android:textSize="20sp" />
+
+
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btnSetHomeLocation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="40dp"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/yellow_border"
+        android:includeFontPadding="false"
+        android:onClick="saveHomeLocation"
+        android:text="Set Home Locaton"
+        android:textColor="@color/textPrimaryDark" />
+
+
+
+</RelativeLayout>
+<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
@@ -13,7 +122,12 @@
         android:layout_height="match_parent"
         tools:context=".MyLocation">
 
-
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:translationY="-24dp"
+            android:src="@drawable/ic_pin"/>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -68,4 +182,4 @@
     </fragment>
 
 
-</LinearLayout>
+</LinearLayout>-->
