--- a/app/src/main/res/layout/activity_my_location.xml
+++ b/app/src/main/res/layout/activity_my_location.xml
@@ -15,8 +15,9 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="10dp"
-        android:background="@color/backgroundColor"
+        android:layout_marginTop="0dp"
+        android:layout_margin="10dp"
+        android:background="@drawable/white_border"
         android:elevation="10dp"
         android:id="@+id/searchBox">
         <ImageView
