--- a/app/src/main/res/layout/activity_my_location.xml
+++ b/app/src/main/res/layout/activity_my_location.xml
@@ -1,12 +1,161 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:context=".MyLocation"
+    tools:openDrawer="start">
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/header"
+        app:menu="@menu/main_menu" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/main_toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/navigation_back_color"
+                    android:theme="@style/ToolbarTheme"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <fragment
+                        android:id="@+id/map"
+                        android:name="com.google.android.gms.maps.SupportMapFragment"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+
+                    <RelativeLayout
+                        android:id="@+id/searchBox"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_margin="10dp"
+                        android:layout_marginTop="0dp"
+                        android:background="@drawable/white_border"
+                        android:elevation="10dp">
+
+                        <ImageView
+                            android:id="@+id/ic_magnify"
+                            android:layout_width="15dp"
+                            android:layout_height="15dp"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="10dp"
+                            android:src="@drawable/ic_magnify" />
+
+                        <AutoCompleteTextView
+                            android:id="@+id/input_search"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_toRightOf="@id/ic_magnify"
+                            android:background="@null"
+                            android:hint="Enter Address, City or Zip Code"
+                            android:imeOptions="actionSearch"
+                            android:inputType="text"
+                            android:textColor="@color/text_color"
+                            android:textSize="14sp" />
+
+
+                    </RelativeLayout>
+
+
+                    <ImageView
+                        android:id="@id/ic_magnify"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/ic_location_pin"
+                        android:translationY="-24dp" />
+
+
+                    <LinearLayout
+                        android:id="@+id/locateMeContainer"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_above="@+id/btnSetHomeLocation"
+                        android:layout_marginBottom="20dp"
+                        android:gravity="center_horizontal|center_vertical"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/locateMeImage"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_centerVertical="true"
+                            android:onClick="locateMe"
+                            android:src="@drawable/ic_gps" />
+
+                        <TextView
+                            android:id="@+id/locateMeText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_toRightOf="@id/locateMeImage"
+                            android:fontFamily="@font/work_sans_bold"
+                            android:includeFontPadding="false"
+                            android:text="@string/locateMe"
+                            android:textColor="@color/navigation_back_color"
+                            android:textSize="20sp" />
+
+
+                    </LinearLayout>
+
+                    <Button
+                        android:id="@+id/btnSetHomeLocation"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginBottom="40dp"
+                        android:background="@drawable/yellow_border"
+                        android:includeFontPadding="false"
+                        android:onClick="saveHomeLocation"
+                        android:text="Set Home Locaton"
+                        android:textColor="@color/textPrimaryDark" />
+                </RelativeLayout>
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.drawerlayout.widget.DrawerLayout><!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    app:layout_behavior=ma"@string/appbar_scrolling_view_behavior"
     tools:context=".MyLocation">
-
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/main_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/navigation_back_color"
+        android:theme="@style/ToolbarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:title=""
+        app:titleMarginStart="40dp" />
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
@@ -21,8 +170,8 @@
         android:elevation="10dp"
         android:id="@+id/searchBox">
         <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
             android:id="@+id/ic_magnify"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
@@ -32,7 +181,8 @@
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:textSize="15sp"
+            android:layout_marginRight="10dp"
+            android:textSize="14sp"
             android:textColor="@color/text_color"
             android:background="@null"
             android:id="@+id/input_search"
@@ -47,12 +197,13 @@
 
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_centerInParent="true"
+
             android:translationY="-24dp"
             android:id="@id/ic_magnify"
-            android:src="@drawable/ic_pin"/>
+            android:src="@drawable/ic_location_pin"/>
 
 
 
@@ -108,79 +259,79 @@
 
 
 
-</RelativeLayout>
-<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <fragment
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+</RelativeLayout>-->
+    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:map="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MyLocation">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:translationY="-24dp"
-            android:src="@drawable/ic_pin"/>
-        <RelativeLayout
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <LinearLayout
-                android:id="@+id/locateMeContainer"
-                android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".MyLocation">
+
+            <ImageView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center_horizontal|center_vertical"
-                android:orientation="horizontal"
-                android:layout_above="@+id/btnSetHomeLocation">
-
-                <ImageView
-                    android:id="@+id/locateMeImage"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_centerVertical="true"
-                    android:onClick="locateMe"
-                    android:src="@drawable/locate_me" />
-
-                <TextView
-                    android:id="@+id/locateMeText"
-                    android:layout_width="wrap_content"
+                android:layout_centerInParent="true"
+                android:translationY="-24dp"
+                android:src="@drawable/ic_pin"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:id="@+id/locateMeContainer"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:orientation="horizontal"
+                    android:layout_above="@+id/btnSetHomeLocation">
+
+                    <ImageView
+                        android:id="@+id/locateMeImage"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_centerVertical="true"
+                        android:onClick="locateMe"
+                        android:src="@drawable/locate_me" />
+
+                    <TextView
+                        android:id="@+id/locateMeText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_toRightOf="@id/locateMeImage"
+                        android:fontFamily="@font/work_sans_bold"
+                        android:includeFontPadding="false"
+                        android:text="@string/locateMe"
+                        android:textColor="@color/navigation_back_color"
+                        android:textSize="20sp" />
+
+
+                </LinearLayout>
+
+                <Button
+                    android:id="@+id/btnSetHomeLocation"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_toRightOf="@id/locateMeImage"
-                    android:fontFamily="@font/work_sans_bold"
+                    android:layout_margin="10dp"
+                    android:layout_alignParentBottom="true"
+                    android:background="@color/btn_color"
                     android:includeFontPadding="false"
-                    android:text="@string/locateMe"
-                    android:textColor="@color/navigation_back_color"
-                    android:textSize="20sp" />
+                    android:onClick="saveHomeLocation"
+                    android:text="Set Home Locaton"
+                    android:textColor="@color/textPrimaryDark" />
+
+            </RelativeLayout>
+
+        </fragment>
 
 
-            </LinearLayout>
-
-            <Button
-                android:id="@+id/btnSetHomeLocation"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_margin="10dp"
-                android:layout_alignParentBottom="true"
-                android:background="@color/btn_color"
-                android:includeFontPadding="false"
-                android:onClick="saveHomeLocation"
-                android:text="Set Home Locaton"
-                android:textColor="@color/textPrimaryDark" />
-
-        </RelativeLayout>
-
-    </fragment>
-
-
-</LinearLayout>-->
+    </LinearLayout>-->
