--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,5 @@
     <color name="textSecondry">#4A6572</color>
     //======textColor on dark them
     <color name="textOnDarkTheme">#FAAB1A</color>
+    <color name="navButtons">#F9AA33</color>
 </resources>
