--- a/app/src/main/res/layout/product_card_view.xml
+++ b/app/src/main/res/layout/product_card_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -18,11 +18,13 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <ImageView
                 android:id="@+id/item_image"
                 android:layout_width="130dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/bottle"/>
+                android:scaleType="fitCenter"
+                android:src="@drawable/bottle" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -112,4 +114,4 @@
 
 
     </com.google.android.material.card.MaterialCardView>
-</FrameLayout>
+</RelativeLayout>
