--- a/app/src/main/res/menu/sidebar_menu.xml
+++ b/app/src/main/res/menu/sidebar_menu.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:showIn="navigation_view">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
@@ -19,7 +17,7 @@
             android:icon="@drawable/ic_my_impact">
         </item>
         <item
-            android:id="@+id/nav_add_listing"
+            android:id="@+id/nav_listing"
             android:title="My Listing"
             android:icon="@drawable/ic_my_listing">
         </item>
@@ -34,7 +32,7 @@
             android:icon="@drawable/ic_notifications">
         </item>
         <item
-            android:id="@+id/nav_my_location"
+            android:id="@+id/nav_location"
             android:title="Location"
             android:icon="@drawable/ic_location">
         </item>
