--- a/app/src/main/res/layout/activity_main_container.xml
+++ b/app/src/main/res/layout/activity_main_container.xml
@@ -31,30 +31,30 @@
                     app:layout_scrollFlags="scroll|enterAlways"
                     app:popupTheme="@style/AppTheme.PopupOverlay" />
             </com.google.android.material.appbar.AppBarLayout>
-            <FrameLayout
-                android:id="@+id/mainFrameLayout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+<!--            <FrameLayout-->
+<!--                android:id="@+id/mainFrameLayout"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent">-->
 
-            </FrameLayout>
-<!--&lt;!&ndash;            <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"&ndash;&gt;-->
-<!--&lt;!&ndash;                xmlns:app="http://schemas.android.com/apk/res-auto"&ndash;&gt;-->
-<!--&lt;!&ndash;                xmlns:tools="http://schemas.android.com/tools"&ndash;&gt;-->
-<!--&lt;!&ndash;                android:layout_width="match_parent"&ndash;&gt;-->
-<!--&lt;!&ndash;                android:layout_height="match_parent"&ndash;&gt;-->
-<!--&lt;!&ndash;                app:layout_behavior="@string/appbar_scrolling_view_behavior">&ndash;&gt;-->
-<!--&lt;!&ndash;      -->
-<!--&lt;!&ndash;             <fragment-->
-<!--&lt;!&ndash;                  android:id="@+id/nav_host_fragment"&ndash;&gt;&ndash;&gt;-->
-<!--&lt;!&ndash;                  android:name="androidx.navigation.fragment.NavHostFragment"&ndash;&gt;&ndash;&gt;-->
-<!--&lt;!&ndash;                  android:layout_width="match_parent"&ndash;&gt;&ndash;&gt;-->
-<!--&lt;!&ndash;                  android:layout_height="match_parent"&ndash;&gt;&ndash;&gt;-->
-<!--&lt;!&ndash;                  app:defaultNavHost="true"&ndash;&gt;&ndash;&gt;-->
-<!--&lt;!&ndash;                  app:layout_constraintLeft_toLeftOf="parent"&ndash;&gt;&ndash;&gt;-->
-<!--&lt;!&ndash;                  app:layout_constraintRight_toRightOf="parent"&ndash;&gt;&ndash;&gt;-->
-<!--&lt;!&ndash;                  app:layout_constraintTop_toTopOf="parent"&ndash;&gt;&ndash;&gt;-->
-<!--&lt;!&ndash;                  app:navGraph="@navigation/mobile_navigation" />&ndash;&gt;&ndash;&gt;-->
-<!--&lt;!&ndash;            </androidx.constraintlayout.widget.ConstraintLayout>&ndash;&gt;-->
+<!--           </FrameLayout>-->
+                <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+         <fragment
+             android:id="@+id/nav_host_fragment"
+             android:name="androidx.navigation.fragment.NavHostFragment"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             app:defaultNavHost="true"
+             app:layout_constraintLeft_toLeftOf="parent"
+             app:layout_constraintRight_toRightOf="parent"
+             app:layout_constraintTop_toTopOf="parent"
+             app:navGraph="@navigation/mobile_navigation" />
+         </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
 
 
@@ -65,5 +65,5 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:headerLayout="@layout/header"
-        app:menu="@menu/sidebar_menu" />
+        app:menu="@menu/main_menu" />
 </androidx.drawerlayout.widget.DrawerLayout>
