--- a/app/src/main/res/layout/fragment_my_location.xml
+++ b/app/src/main/res/layout/fragment_my_location.xml
@@ -4,7 +4,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context=".MyLocationFragment">
+tools:context=".fragments.MyLocationFragment">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,11 +20,12 @@ tools:context=".MyLocationFragment">
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/fragment_searchBox"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
             android:layout_marginTop="0dp"
             android:background="@drawable/white_border"
             android:elevation="10dp">
@@ -34,7 +35,7 @@ tools:context=".MyLocationFragment">
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="5dp"
                 android:src="@drawable/ic_magnify" />
 
             <AutoCompleteTextView
@@ -43,17 +44,22 @@ tools:context=".MyLocationFragment">
                 android:layout_height="match_parent"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="20dp"
-                android:layout_toRightOf="@id/fragment_ic_magnify"
+                android:layout_marginRight="15dp"
                 android:background="@null"
                 android:hint="Enter Address, City or Zip Code"
                 android:imeOptions="actionSearch"
                 android:inputType="text"
                 android:textColor="@color/text_color"
                 android:textSize="14sp" />
+            <ImageView
+                android:id="@+id/fragment_ic_cancel"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@id/fragment_input_search"
+                android:src="@drawable/ic_magnify" />
 
-
-        </RelativeLayout>
+        </LinearLayout>
 
 
         <ImageView
@@ -112,7 +118,7 @@ tools:context=".MyLocationFragment">
             android:layout_alignParentBottom="true"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="70dp"
+            android:layout_marginBottom="20dp"
             android:textSize="15dp"
             android:background="@drawable/yellow_border"
             android:includeFontPadding="false"
