--- a/app/src/main/res/layout/product_card_view.xml
+++ b/app/src/main/res/layout/product_card_view.xml
@@ -23,8 +23,7 @@
                 android:id="@+id/item_image"
                 android:layout_width="130dp"
                 android:layout_height="match_parent"
-                android:scaleType="fitCenter"
-                android:src="@drawable/bottle" />
+                android:scaleType="fitCenter" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -40,7 +39,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="25dp"
-                    android:text="Vase"
                     android:fontFamily="@font/work_sans_bold"
                     android:textColor="@color/textPrimaryDark"
                     android:textAppearance="?attr/textAppearanceHeadline6" />
@@ -55,7 +53,6 @@
                         android:id="@+id/item_profile_picture"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:src="@drawable/admin_pic"
                         app:civ_border_color="#00000000"
                         app:civ_border_width="2dp" />
                    <!-- <ImageView
@@ -71,7 +68,6 @@
                         android:padding="2dp"
                         android:fontFamily="@font/work_sans_regular"
                         android:textColor="@color/textPrimary"
-                        android:text="Hamida Hussaini"
                         android:textSize="15dp" />
                 </LinearLayout>
                 <LinearLayout
@@ -81,8 +77,8 @@
                     android:layout_marginTop="5dp"
                     android:gravity="center_vertical">
                     <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
+                        android:layout_width="15dp"
+                        android:layout_height="12dp"
                         android:src="@drawable/item_location_distance"/>
                     <TextView
                         android:id="@+id/item_location"
@@ -91,12 +87,11 @@
                         android:padding="2dp"
                         android:fontFamily="@font/work_sans_regular"
                         android:textColor="@color/textSecondry"
-                        android:text="4485.5km"
                         android:textSize="15dp" />
                     <ImageView
 
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
                         android:layout_marginLeft="10dp"
                         android:src="@drawable/views"/>
                     <TextView
@@ -106,7 +101,6 @@
                         android:padding="2dp"
                         android:fontFamily="@font/work_sans_regular"
                         android:textColor="@color/textSecondry"
-                        android:text="4485"
                         android:textSize="15dp" />
                 </LinearLayout>
             </LinearLayout>
