--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,12 +31,31 @@
         <item name="textAllCaps">false</item>
 
     </style>
+
     <style name="select_option" parent="Widget.AppCompat.TextView">
         <item name="android:fontFamily">@font/work_sans_medium</item>
         <item name="android:textSize">15dp</item>
         <item name="android:textColor"> @color/textSecondry</item>
         <item name="textAllCaps">false</item>
-
+    </style>
+    <style name="page_Title" parent="Widget.AppCompat.TextView">
+        <item name="android:fontFamily">@font/work_sans_bold</item>
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColor"> @color/textPrimaryDark</item>
+        <item name="textAllCaps">false</item>
+    </style>
+    <style name="radio_button" parent="Widget.AppCompat.CompoundButton.RadioButton">
+        <item name="android:fontFamily">@font/work_sans_medium</item>
+        <item name="android:layout_marginLeft">3dp</item>
+        <item name="android:layout_marginRight">3dp</item>
+        <item name="android:paddingBottom">7dp</item>
+        <item name="android:paddingTop">7dp</item>
+        <item name="android:paddingRight">25dp</item>
+        <item name="android:paddingLeft">25dp</item>
+        <item name="android:textSize">15dp</item>
+        <item name="android:button">@color/space_transparent</item>
+        <item name="android:background">@drawable/radio_selector</item>
+        <item name="android:textColor">@drawable/radio_text_color</item>
     </style>
 
     <style name="Tab" parent="Widget.Design.TabLayout">
@@ -53,6 +72,13 @@
         <item name="android:textColor">@color/navButtons</item>
        <!-- <item name="android:background">@color/backgroundColor</item>-->
     </style>
+    <style name="tab_theme" parent="ThemeOverlay.AppCompat.Light" >
+        <item name="android:textColorPrimary">@color/textPrimary</item>
+        <item name="android:textColorSecondary">@color/textPrimary</item>
+        <item name="android:textColor">@color/textPrimary</item>
+        <!-- <item name="android:background">@color/backgroundColor</item>-->
+    </style>
+
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" >
         <item name="android:textColorPrimary">@color/navButtons</item>
